// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output testing should parse kitchen sink correctly 1`] = `
"/* eslint-disable */
/* tslint:disable */

export interface posts {
  title: string;
  draft: boolean;
  date: string;
  image?: string;
}

export interface faq {
  title: string;
}

export interface general_posts {
  front_limit: string;
  author: string;
  thumb?: string;
}

export interface general {
  site_title: string;
  posts: general_posts;
}

export interface authors_authors {
  name: string;
  description: string;
}

export interface authors {
  authors: authors_authors[];
}

export type kitchenSink_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type kitchenSink_select_multiple_options = \\"a\\" | \\"b\\" | \\"c\\";

export type kitchenSink_select_numeric_options = 1 | 2 | 3;

export type kitchenSink_object_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export interface kitchenSink_object {
  post: any;
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: kitchenSink_object_select_options;
}

export type kitchenSink_list_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type kitchenSink_list_object_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type kitchenSink_list_object_list_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type kitchenSink_list_object_list_object_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export interface kitchenSink_list_object_list_object {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: kitchenSink_list_object_list_object_select_options;
}

export interface kitchenSink_list_object_list {
  post: any;
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: kitchenSink_list_object_list_select_options;
  hidden: any;
  object: kitchenSink_list_object_list_object;
}

export interface kitchenSink_list_object {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: kitchenSink_list_object_select_options;
  list: kitchenSink_list_object_list[];
}

export interface kitchenSink_list {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: kitchenSink_list_select_options;
  object: kitchenSink_list_object;
}

export interface kitchenSink_typed_list_type_2_object_nested {
  number: string;
}

export type kitchenSink_typed_list_type_2_object_select_options = \\"a\\" | \\"b\\" | \\"c\\";

export interface kitchenSink_typed_list_type_1_object {
  type: \\"type_1_object\\";
  string: string;
  boolean: boolean;
  text: string;
}

export interface kitchenSink_typed_list_type_2_object {
  type: \\"type_2_object\\";
  number: string;
  nested: kitchenSink_typed_list_type_2_object_nested;
  select: kitchenSink_typed_list_type_2_object_select_options;
  datetime: string;
  markdown: string;
}

export interface kitchenSink_typed_list_type_3_object {
  type: \\"type_3_object\\";
  date: string;
  image: string;
  file: any;
}

export interface kitchenSink_typed_list_type_4_object {
  type: \\"type_4_object\\";
  name: string;
}

export interface kitchenSink_code {
  code: string;
  lang: string;
}

export interface kitchenSink_code_alt {
  alt: string;
  typescript: string;
}

export interface kitchenSink {
  post: any;
  title: string;
  boolean: boolean;
  map: string;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  color: string;
  colorEditable: string;
  image: string;
  file: any;
  select: kitchenSink_select_options;
  select_multiple: kitchenSink_select_multiple_options[];
  select_numeric: kitchenSink_select_numeric_options;
  hidden: any;
  object: kitchenSink_object;
  list: kitchenSink_list[];
  typed_list: (kitchenSink_typed_list_type_1_object | kitchenSink_typed_list_type_2_object | kitchenSink_typed_list_type_3_object | kitchenSink_typed_list_type_4_object)[];
  code: kitchenSink_code;
  code_alt: kitchenSink_code_alt;
  snippet: string;
}
"
`;

exports[`Output testing should parse kitchen sink with label option 1`] = `
"/* eslint-disable */
/* tslint:disable */

export interface Post {
  title: string;
  draft: boolean;
  date: string;
  image?: string;
}

export interface FAQ {
  title: string;
}

export interface SiteSettings_PostSettings {
  front_limit: string;
  author: string;
  thumb?: string;
}

export interface SiteSettings {
  site_title: string;
  posts: SiteSettings_PostSettings;
}

export interface Authors_Author {
  name: string;
  description: string;
}

export interface Authors {
  authors: Authors_Author[];
}

export type KitchenSink_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_SelectMultiple_options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_SelectNumeric_options = 1 | 2 | 3;

export type KitchenSink_Object_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export interface KitchenSink_Object {
  post: any;
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_Object_Select_options;
}

export type KitchenSink_List_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_List_Object_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_List_Object_List_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_List_Object_List_Object_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export interface KitchenSink_List_Object_List_Object {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Object_List_Object_Select_options;
}

export interface KitchenSink_List_Object_List {
  post: any;
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Object_List_Select_options;
  hidden: any;
  object: KitchenSink_List_Object_List_Object;
}

export interface KitchenSink_List_Object {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Object_Select_options;
  list: KitchenSink_List_Object_List[];
}

export interface KitchenSink_List {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Select_options;
  object: KitchenSink_List_Object;
}

export interface KitchenSink_TypedList_Type2Object_NestedObject {
  number: string;
}

export type KitchenSink_TypedList_Type2Object_Select_options = \\"a\\" | \\"b\\" | \\"c\\";

export interface KitchenSink_TypedList_Type1Object {
  type: \\"type_1_object\\";
  string: string;
  boolean: boolean;
  text: string;
}

export interface KitchenSink_TypedList_Type2Object {
  type: \\"type_2_object\\";
  number: string;
  nested: KitchenSink_TypedList_Type2Object_NestedObject;
  select: KitchenSink_TypedList_Type2Object_Select_options;
  datetime: string;
  markdown: string;
}

export interface KitchenSink_TypedList_type3Object {
  type: \\"type_3_object\\";
  date: string;
  image: string;
  file: any;
}

export interface KitchenSink_TypedList_type_4_object {
  type: \\"type_4_object\\";
  name: string;
}

export interface KitchenSink_CodeBlock {
  code: string;
  lang: string;
}

export interface KitchenSink_CodeAltBlock {
  alt: string;
  typescript: string;
}

export interface KitchenSink {
  post: any;
  title: string;
  boolean: boolean;
  map: string;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  color: string;
  colorEditable: string;
  image: string;
  file: any;
  select: KitchenSink_Select_options;
  select_multiple: KitchenSink_SelectMultiple_options[];
  select_numeric: KitchenSink_SelectNumeric_options;
  hidden: any;
  object: KitchenSink_Object;
  list: KitchenSink_List[];
  typed_list: (KitchenSink_TypedList_Type1Object | KitchenSink_TypedList_Type2Object | KitchenSink_TypedList_type3Object | KitchenSink_TypedList_type_4_object)[];
  code: KitchenSink_CodeBlock;
  code_alt: KitchenSink_CodeAltBlock;
  snippet: string;
}
"
`;

exports[`Output testing should support capitalization of type names 1`] = `
"/* eslint-disable */
/* tslint:disable */

export interface Posts {
  title: string;
  draft: boolean;
  date: string;
  image?: string;
}

export interface Faq {
  title: string;
}

export interface General_Posts {
  front_limit: string;
  author: string;
  thumb?: string;
}

export interface General {
  site_title: string;
  posts: General_Posts;
}

export interface Authors_Authors {
  name: string;
  description: string;
}

export interface Authors {
  authors: Authors_Authors[];
}

export type KitchenSink_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_Select_Multiple_Options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_Select_Numeric_Options = 1 | 2 | 3;

export type KitchenSink_Object_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export interface KitchenSink_Object {
  post: any;
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_Object_Select_Options;
}

export type KitchenSink_List_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_List_Object_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_List_Object_List_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export type KitchenSink_List_Object_List_Object_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export interface KitchenSink_List_Object_List_Object {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Object_List_Object_Select_Options;
}

export interface KitchenSink_List_Object_List {
  post: any;
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Object_List_Select_Options;
  hidden: any;
  object: KitchenSink_List_Object_List_Object;
}

export interface KitchenSink_List_Object {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Object_Select_Options;
  list: KitchenSink_List_Object_List[];
}

export interface KitchenSink_List {
  string: string;
  boolean: boolean;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  image: string;
  file: any;
  select: KitchenSink_List_Select_Options;
  object: KitchenSink_List_Object;
}

export interface KitchenSink_Typed_List_Type_2_Object_Nested {
  number: string;
}

export type KitchenSink_Typed_List_Type_2_Object_Select_Options = \\"a\\" | \\"b\\" | \\"c\\";

export interface KitchenSink_Typed_List_Type_1_Object {
  type: \\"type_1_object\\";
  string: string;
  boolean: boolean;
  text: string;
}

export interface KitchenSink_Typed_List_Type_2_Object {
  type: \\"type_2_object\\";
  number: string;
  nested: KitchenSink_Typed_List_Type_2_Object_Nested;
  select: KitchenSink_Typed_List_Type_2_Object_Select_Options;
  datetime: string;
  markdown: string;
}

export interface KitchenSink_Typed_List_Type_3_Object {
  type: \\"type_3_object\\";
  date: string;
  image: string;
  file: any;
}

export interface KitchenSink_Typed_List_Type_4_Object {
  type: \\"type_4_object\\";
  name: string;
}

export interface KitchenSink_Code {
  code: string;
  lang: string;
}

export interface KitchenSink_Code_Alt {
  alt: string;
  typescript: string;
}

export interface KitchenSink {
  post: any;
  title: string;
  boolean: boolean;
  map: string;
  text: string;
  number: string;
  markdown: string;
  datetime: string;
  date: string;
  color: string;
  colorEditable: string;
  image: string;
  file: any;
  select: KitchenSink_Select_Options;
  select_multiple: KitchenSink_Select_Multiple_Options[];
  select_numeric: KitchenSink_Select_Numeric_Options;
  hidden: any;
  object: KitchenSink_Object;
  list: KitchenSink_List[];
  typed_list: (KitchenSink_Typed_List_Type_1_Object | KitchenSink_Typed_List_Type_2_Object | KitchenSink_Typed_List_Type_3_Object | KitchenSink_Typed_List_Type_4_Object)[];
  code: KitchenSink_Code;
  code_alt: KitchenSink_Code_Alt;
  snippet: string;
}
"
`;
